[gd_scene load_steps=9 format=3 uid="uid://cmqgagi0c6fbc"]

[ext_resource type="Texture2D" uid="uid://nytkxk3pv8o" path="res://scenes/ui/Buttons/start_game_buttons/startGame-default.png" id="1_cxp8j"]
[ext_resource type="Theme" uid="uid://54com4xaym22" path="res://resources/fonts/theme.tres" id="1_vg8iv"]
[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="2_8jlij"]
[ext_resource type="Texture2D" uid="uid://djvi3ihetpddx" path="res://scenes/ui/Buttons/start_game_buttons/startGame-pressed.png" id="2_j82va"]
[ext_resource type="Texture2D" uid="uid://cwboatwjlusg0" path="res://scenes/ui/Buttons/start_game_buttons/startGame-hover.png" id="3_dr0io"]
[ext_resource type="Texture2D" uid="uid://b08k35ur8ogu4" path="res://scenes/ui/Buttons/restart_score_buttons/restart-default.png" id="7_h4cqt"]
[ext_resource type="Texture2D" uid="uid://0y1qqgab8767" path="res://scenes/ui/Buttons/restart_score_buttons/restart-pressed.png" id="8_3qwwo"]
[ext_resource type="Texture2D" uid="uid://25uqs6qhmifi" path="res://scenes/ui/Buttons/restart_score_buttons/restart-hover.png" id="9_tpwuy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vg8iv")
script = ExtResource("2_8jlij")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 22.0
offset_right = 214.0
offset_bottom = 56.0
text = " HighScore!"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 88.0
offset_right = 317.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 100

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 95.0
offset_right = 457.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 100

[node name="Label4" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 16.0
offset_top = 662.0
offset_right = 154.0
offset_bottom = 733.0
text = "Scores
Reset"

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.334
anchor_top = 0.829
anchor_right = 0.934
anchor_bottom = 0.95
offset_left = -1.52588e-05
offset_top = -1.20007
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="StartGame" type="TextureButton" parent="Options"]
layout_mode = 2
texture_normal = ExtResource("1_cxp8j")
texture_pressed = ExtResource("2_j82va")
texture_hover = ExtResource("3_dr0io")

[node name="RestartScores" type="TextureButton" parent="Options"]
layout_mode = 2
texture_normal = ExtResource("7_h4cqt")
texture_pressed = ExtResource("8_3qwwo")
texture_hover = ExtResource("9_tpwuy")

[connection signal="pressed" from="Options/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Options/RestartScores" to="." method="_on_restart_scores_pressed"]
